<resources>

    <string name="app_name">Modal Time</string>
    <string name="app_description">Learn and measure how speed you are with different kind of interaction.</string>


    <!--
    UI
    -->


    <string name="calibrate">Just look toward horizon, make sure it is near 0, then touch the screen</string>


    <!-- Config -->

    <string name="hintName">name</string>

    <string name="textInteraction">Choose order of interactions (between 1 and 4)</string>

    <string name="textVoice">Voice Control</string>
    <string name="textHead">Head Gesture Recognition</string>
    <string name="textFinger">Finger Touch Gesture</string>
    <string name="textWatch">SmartWatch (ControlWear)</string>

    <string name="buttonValidate">Validate</string>

    <string name="textErrorName">Error: name must be at least 3 characters length</string>
    <string name="textErrorValues">Error: some values are out of range, must be between 1 and 4</string>
    <string name="textErrorUnique">Error: some values are identical, must be different</string>


    <!-- Maze -->

    <string name="contentDescriptionTime">Timing Icon</string>
    <string name="textInstructionMaze">Start at 11 and move to 16 by passing through 1, 8 and 14</string>

    <string name="maze_finger">Finger Touch</string>
    <string name="maze_head">Head Gesture</string>
    <string name="maze_voice">Voice Control</string>
    <string name="maze_watch">Smart Watch</string>
    <string name="maze_all">Any kind of Interaction</string>


    <!-- Origami -->

    <string name="contentDescriptionStep">Origami diagram (one step)</string>
    <string name="origami_finger">FINGER</string>
    <string name="origami_watch">WATCH</string>
    <string name="origami_head">HEAD</string>
    <string name="origami_all_interaction">Any kind of interaction you want</string>

    <string name="origami_help_1">Diagonal fold and unfold</string>
    <string name="origami_help_2">Return to other side, then fold and unfold in middle</string>
    <string name="origami_help_3">Go back to first side, and fold</string>
    <string name="origami_help_4">Try to get something similar to this</string>
    <string name="origami_help_5">Fold one corner on each side (left and right)</string>
    <string name="origami_help_6">Do the same the other side</string>
    <string name="origami_help_7">Critic step, fold right to left for 1 layer, return and right to left again with 1 layer</string>
    <string name="origami_help_8">Fold 1 layer (from left) to center</string>
    <string name="origami_help_9">Do the same with opposite one (center)</string>
    <string name="origami_help_10">Make sure, the second one go in</string>
    <string name="origami_help_11">Return and do the same</string>
    <string name="origami_help_12">Make sure you can see a little hole</string>
    <string name="origami_help_13">Open/Fold on layer on each side to make petal</string>
    <string name="origami_help_14">You should get something similar</string>
    <string name="origami_help_15">Take another paper and diagonal fold/unfold</string>
    <string name="origami_help_16">Fold each side to center</string>
    <string name="origami_help_17">Again, fold each side to center</string>
    <string name="origami_help_18">And again, a third time, each side to center</string>
    <string name="origami_help_19">You shoud have something similar to this</string>
    <string name="origami_help_20">Return and fold in middle</string>
    <string name="origami_help_21">Fold in middle from right to left</string>
    <string name="origami_help_22">You can fold/bend on layer to make the leaf</string>
    <string name="origami_help_23">put together the petals and the stem</string>


    <!-- Training -->

    <string name="training_finger_right">Use your finger to swipe RIGHT on screens (3 times).</string>
    <string name="training_finger_left">Use your finger to swipe LEFT on screens (3 times).</string>
    <string name="training_finger_up">Use your finger to swipe FORWARD on screens (3 times).</string>
    <string name="training_finger_down">Use your finger to swipe BACKWARD on screens (3 times).</string>

    <string name="training_head_right">Make a little tilt RIGHT with you head (3 times).</string>
    <string name="training_head_left">Make a little tilt LEFT with you head (3 times).</string>
    <string name="training_head_up">Make a little nod UP with you head (3 times).</string>
    <string name="training_head_down">Make a little nod DOWN with you head (3 times).</string>

    <string name="training_watch_right">Use your finger to swipe RIGHT on the smartwatch (3 times).</string>
    <string name="training_watch_left">Use your finger to swipe LEFT on the smartwatch (3 times).</string>
    <string name="training_watch_up">Use your finger to swipe FORWARD on the smartwatch (3 times).</string>
    <string name="training_watch_down">Use your finger to swipe BACKWARD on the smartwatch (3 times).</string>

    <string name="training_voice_right">You can use your voice too, say "Next" (3 times).</string>
    <string name="training_voice_left">You can use your voice too, say "Previous" (3 times).</string>
    <string name="training_voice_up">You can use your voice too, say "Ok" (3 times).</string>
    <string name="training_voice_down">You can use your voice too, say "Cancel" (3 times).</string>

    <string name="training_all_right">Use any kind of interaction you want to go RIGHT (3 times).</string>
    <string name="training_all_left">Use any kind of interaction you want to go LEFT (3 times).</string>
    <string name="training_all_up">Use any kind of interaction you want to go UP (3 times).</string>
    <string name="training_all_down">Use any kind of interaction you want to go DOWN (3 times).</string>

</resources>
